# bene

./: README.md
example/: iris.idt  iris.vd  run.sh
server/: .gitignore  CLIENT.md  README.md  pyproject.toml
server/bene_server/: __init__.py  config.py  datasets.py  main.py  paths.py  pipeline.py  schemas.py
server/scripts/: benchmark_datain.py
server/tests/: conftest.py  test_learn_timeout.py  test_upload.py  test_variable_mapping.py
src/: arcs2dot.c  ban_arc.c  cfg.h  dump_scorefile.c  files.c  files.h  force_arc.c  gen_prior_file.c  get_best_net.c  get_best_order.c  get_best_parents.c  get_best_sinks.c  get_local_scores.c  get_local_scores.h  gopt.c  ilogi.c  ilogi.h  ls_BDe.c  ls_BDe.h  ls_BDq.c  ls_BDq.h  ls_LOO.c  ls_LOO.h  ls_NML.c  ls_NML.h  ls_XIC.c  ls_XIC.h  ls_cNML.c  ls_cNML.h  ls_fNML.c  ls_fNML.h  ls_qNML.c  ls_qNML.h  net2parents.c  parents2arcs.c  reg.c  reg.h  reverse_local_scores.c  score_net.c  score_nets.c  (+7 more)
tests/data/ecoli/: ecoli.idt  ecoli.vd
tests/data/liver/: liver.idt  liver.vd
tests/regression/: run_regression.sh
tests/regression/expected/ecoli/0.5/: stdout.txt
tests/regression/expected/ecoli/1.0/: net.txt  stdout.txt
tests/regression/expected/ecoli/1.0L/: net.txt  stdout.txt
tests/regression/expected/ecoli/1.0Q/: net.txt  stdout.txt
tests/regression/expected/ecoli/2.0/: stdout.txt
tests/regression/expected/ecoli/AIC/: net.txt  stdout.txt
tests/regression/expected/ecoli/BIC/: net.txt  stdout.txt
tests/regression/expected/ecoli/HQC/: net.txt  stdout.txt
tests/regression/expected/ecoli/LOO/: net.txt
(+40 files in other folders)
