[project]
name = "bene-server"
version = "0.1.0"
description = "HTTP orchestration for bene Bayesian network structure learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "python-multipart>=0.0.6",
]

[project.scripts]
bene-server = "bene_server.main:run"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bene_server*"]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "httpx>=0.26.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: full bene pipeline (slow; needs built binaries)",
]
